[tool.poetry]
name = "misc_topic"
version = "0.1.0"
description = ""
authors = ["Dan Nelson <danelson@nwi.net>"]
license = "MIT license"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
pandas = "^1.5.1"
lxml = "^4.9.1"
sqlite3

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
